<resources>
    <string name="app_name">MAD15</string>
    <string name="dashboard">Dashboard</string>
    <string name="txt_login">Login</string>
    <string name="btn_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_don_t_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_already_have_an_account_login">Already have an account? Login</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_user_name">User Name</string>
    <string name="txt_user_example_com">user@example.com</string>
    <string name="txt_home">Home</string>
    <string name="txt_messages">Messages</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_made_with_in_sri_lanka">Made with ❤️ in Sri Lanka</string>
</resources>