<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/teal_700"
    android:gravity="bottom">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/txt_profile"
        android:scaleType="centerCrop"
        android:background="@drawable/circle_bg"
        android:padding="4dp" />

    <TextView
        android:id="@+id/FtvUserNameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tvEmailHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_user_example_com"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>
</LinearLayout>